SERVER-9125 Copy collections faster in the config upgrade procedure